src/grammar.output
La regla es inútil debido a los conflictos

   32 $@1: ε


Estado 148 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: sigma $end

    1 sigma: DOCTYPE article

    2 article: A_ARTICLE info titledoc content recusection C_ARTICLE
    3        | A_ARTICLE info titledoc content C_ARTICLE
    4        | A_ARTICLE info content recusection C_ARTICLE
    5        | A_ARTICLE info content C_ARTICLE
    6        | A_ARTICLE titledoc content recusection C_ARTICLE
    7        | A_ARTICLE titledoc content C_ARTICLE

    8 recusection: section recusection
    9            | section
   10            | simsection recusection
   11            | simsection

   12 content: itemizedlist content
   13        | itemizedlist
   14        | important content
   15        | important
   16        | para content
   17        | para
   18        | simpara content
   19        | simpara
   20        | address content
   21        | address
   22        | mediaobject content
   23        | mediaobject
   24        | informaltable content
   25        | informaltable
   26        | table content
   27        | table
   28        | comment content
   29        | comment
   30        | abstract content
   31        | abstract

   32 $@1: ε

   33 section: A_SECTION $@1 info titlesec content recusection C_SECTION
   34        | A_SECTION info titlesec content C_SECTION
   35        | A_SECTION info content recusection C_SECTION
   36        | A_SECTION info content C_SECTION
   37        | A_SECTION titlesec content recusection C_SECTION
   38        | A_SECTION titlesec content C_SECTION

   39 simsection: A_SIMSECTION info titlesec content C_SIMSECTION
   40           | A_SIMSECTION info content C_SIMSECTION
   41           | A_SIMSECTION titlesec content C_SIMSECTION

   42 infocontent: titlesec infocontent
   43            | titlesec
   44            | mediaobject infocontent
   45            | mediaobject
   46            | abstract infocontent
   47            | abstract
   48            | address infocontent
   49            | address
   50            | author infocontent
   51            | author
   52            | date infocontent
   53            | date
   54            | copyright infocontent
   55            | copyright

   56 info: A_INFO infocontent C_INFO

   57 abstractcontent: para abstractcontent
   58                | para
   59                | simpara abstractcontent
   60                | simpara

   61 abstract: A_ABSTRACT titlesec abstractcontent C_ABSTRACT
   62         | A_ABSTRACT abstractcontent C_ABSTRACT

   63 $@2: ε

   64 addresscontent: TEXTO $@2 addresscontent
   65               | TEXTO
   66               | street addresscontent
   67               | street
   68               | city addresscontent
   69               | city
   70               | state addresscontent
   71               | state
   72               | phone addresscontent
   73               | phone
   74               | email addresscontent
   75               | email
   76               | postcode addresscontent
   77               | postcode

   78 address: A_ADDRESS addresscontent C_ADDRESS

   79 authorcontent: firstname authorcontent
   80              | surname authorcontent
   81              | personame authorcontent
   82              | personame
   83              | surname

   84 author: A_AUTHOR authorcontent C_AUTHOR

   85 copyrightyearcontent: year copyrightyearcontent
   86                     | year copyrightholdercontent
   87                     | year

   88 copyrightholdercontent: holder copyrightholdercontent
   89                       | holder

   90 copyright: A_COPYRIGHT copyrightyearcontent C_COPYRIGHT
   91          | A_COPYRIGHT TEXTO C_COPYRIGHT

   92 titlecontent: emphasis titlecontent
   93             | emphasis
   94             | link titlecontent
   95             | link
   96             | email titlecontent
   97             | email

   98 $@3: ε

   99 titlecontent: TEXTO $@3 titlecontent
  100             | TEXTO

  101 titledoc: A_TITLE titlecontent C_TITLE

  102 titlesec: A_TITLE titlecontent C_TITLE

  103 simparacontent: emphasis
  104               | TEXTO
  105               | personame
  106               | link
  107               | email
  108               | author
  109               | comment

  110 simpara: A_SIMPARA simpara simparacontent C_SIMPARA
  111        | A_SIMPARA simparacontent C_SIMPARA

  112 emphasis: A_EMPHASIS emphasis simparacontent C_EMPHASIS
  113         | A_EMPHASIS simparacontent C_EMPHASIS

  114 comment: A_COMMENT comment simparacontent C_COMMENT
  115        | A_COMMENT simparacontent C_COMMENT

  116 link: A_LINK link simparacontent C_LINK
  117     | A_LINK simparacontent C_LINK
  118     | A_LINK xlink C_LINK

  119 paracontent: emphasis
  120            | link
  121            | email
  122            | author
  123            | comment
  124            | itemizedlist
  125            | important
  126            | address
  127            | mediaobject
  128            | informaltable
  129            | TEXTO

  130 para: A_PARA para paracontent C_PARA
  131     | A_PARA paracontent C_PARA

  132 important: A_IMPORTANT titlesec content C_IMPORTANT
  133          | A_IMPORTANT content C_IMPORTANT

  134 sharedcontent: comment sharedcontent
  135              | comment
  136              | emphasis sharedcontent
  137              | emphasis
  138              | link sharedcontent
  139              | link

  140 $@4: ε

  141 sharedcontent: TEXTO $@4 sharedcontent
  142              | TEXTO

  143 personame: A_PERSONNAME firstname surname C_PERSONNAME

  144 firstname: A_FIRSTNAME sharedcontent C_FIRSTNAME

  145 surname: A_SURNAME sharedcontent C_SURNAME

  146 street: A_STREET sharedcontent C_STREET

  147 $@5: ε

  148 postcode: A_POSTCODE TEXTO $@5 C_POSTCODE

  149 city: A_CITY sharedcontent C_CITY

  150 phone: A_PHONE sharedcontent C_PHONE

  151 email: A_EMAIL sharedcontent C_EMAIL

  152 date: A_DATE sharedcontent C_DATE

  153 year: A_YEAR sharedcontent C_YEAR

  154 holder: A_HOLDER sharedcontent C_HOLDER

  155 state: A_STATE sharedcontent C_STATE

  156 mediaobjectcontent: videoobject mediaobjectcontent
  157                   | videoobject
  158                   | imageobject mediaobjectcontent
  159                   | imageobject

  160 mediaobject: A_MEDIAOBJECT info videoobject mediaobjectcontent C_MEDIAOBJECT
  161            | A_MEDIAOBJECT info imageobject mediaobjectcontent C_MEDIAOBJECT
  162            | A_MEDIAOBJECT videoobject mediaobjectcontent C_MEDIAOBJECT
  163            | A_MEDIAOBJECT imageobject mediaobjectcontent C_MEDIAOBJECT
  164            | A_MEDIAOBJECT videoobject C_MEDIAOBJECT
  165            | A_MEDIAOBJECT imageobject C_MEDIAOBJECT

  166 imageobject: A_IMAGEOBJECT info imagedata C_IMAGEOBJECT
  167            | A_IMAGEOBJECT imagedata C_IMAGEOBJECT

  168 videoobject: A_VIDEOOBJECT info videodata C_VIDEOOBJECT
  169            | A_VIDEOOBJECT videodata C_VIDEOOBJECT

  170 videodata: VIDEODATA URL C_REF VIDEODATA RUTA C_REF

  171 imagedata: IMAGEDATA URL C_REF
  172          | IMAGEDATA RUTA C_REF

  173 itemizedlist: A_ITEMIZEDLIST listitem itemizedlist C_ITEMIZEDLIST
  174             | A_ITEMIZEDLIST listitem C_ITEMIZEDLIST

  175 listitem: A_LISTITEM content listitem C_LISTITEM
  176         | A_LISTITEM content C_LISTITEM

  177 informaltablecontent: mediaobject informaltablecontent
  178                     | mediaobject
  179                     | tgroup informaltablecontent
  180                     | tgroup

  181 informaltable: A_INFORMALTABLE informaltablecontent C_INFORMALTABLE

  182 tgroup: A_TGROUP thead tbody tfoot C_TGROUP
  183       | A_TGROUP thead tfoot C_TGROUP
  184       | A_TGROUP tbody tfoot C_TGROUP
  185       | A_TGROUP tfoot C_TGROUP

  186 table: A_TABLE tablecontent C_TABLE

  187 tablecontent: row tablecontent
  188             | row

  189 thead: A_THEAD tablecontent C_THEAD

  190 tbody: A_TBODY tablecontent C_TBODY

  191 tfoot: A_TFOOT tablecontent C_TFOOT

  192 rowcontent: entry rowcontent
  193           | entry
  194           | entrytbl rowcontent
  195           | entrytbl

  196 row: A_ROW rowcontent C_ROW

  197 $@6: ε

  198 entrycontent: TEXTO $@6 entrycontent
  199             | TEXTO
  200             | itemizedlist entrycontent
  201             | itemizedlist
  202             | important entrycontent
  203             | important
  204             | para entrycontent
  205             | para
  206             | simpara entrycontent
  207             | simpara
  208             | mediaobject entrycontent
  209             | mediaobject
  210             | comment entrycontent
  211             | comment
  212             | abstract entrycontent
  213             | abstract

  214 entry: A_ENTRY entrycontent C_ENTRY

  215 entrytbl: A_ENTRYTBL thead tbody C_ENTRYTBL
  216         | A_ENTRYTBL tbody C_ENTRYTBL

  217 xlink: XLINK URL C_REF


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TEXTO <text> (258) 64 65 91 99 100 104 129 141 142 148 198 199
    RUTA (259) 170 172
    URL (260) 170 171 217
    XLINK (261) 217
    VIDEODATA (262) 170
    IMAGEDATA (263) 171 172
    DOCTYPE (264) 1
    C_REF (265) 170 171 172 217
    A_ARTICLE (266) 2 3 4 5 6 7
    C_ARTICLE (267) 2 3 4 5 6 7
    A_INFO (268) 56
    C_INFO (269) 56
    A_TITLE (270) 101 102
    C_TITLE (271) 101 102
    A_ABSTRACT (272) 61 62
    C_ABSTRACT (273) 61 62
    A_PARA (274) 130 131
    C_PARA (275) 130 131
    A_AUTHOR (276) 84
    C_AUTHOR (277) 84
    A_PERSONNAME (278) 143
    C_PERSONNAME (279) 143
    A_FIRSTNAME (280) 144
    C_FIRSTNAME (281) 144
    A_SURNAME (282) 145
    C_SURNAME (283) 145
    A_DATE (284) 152
    C_DATE (285) 152
    A_SECTION (286) 33 34 35 36 37 38
    C_SECTION (287) 33 34 35 36 37 38
    A_SIMSECTION (288) 39 40 41
    C_SIMSECTION (289) 39 40 41
    A_COPYRIGHT (290) 90 91
    C_COPYRIGHT (291) 90 91
    A_ADDRESS (292) 78
    C_ADDRESS (293) 78
    A_CITY (294) 149
    C_CITY (295) 149
    A_STATE (296) 155
    C_STATE (297) 155
    A_POSTCODE (298) 148
    C_POSTCODE (299) 148
    A_STREET (300) 146
    C_STREET (301) 146
    A_EMAIL (302) 151
    C_EMAIL (303) 151
    A_PHONE (304) 150
    C_PHONE (305) 150
    A_ITEMIZEDLIST (306) 173 174
    C_ITEMIZEDLIST (307) 173 174
    A_LISTITEM (308) 175 176
    C_LISTITEM (309) 175 176
    A_EMPHASIS (310) 112 113
    C_EMPHASIS (311) 112 113
    A_HOLDER (312) 154
    C_HOLDER (313) 154
    A_SIMPARA (314) 110 111
    C_SIMPARA (315) 110 111
    A_YEAR (316) 153
    C_YEAR (317) 153
    A_COMMENT (318) 114 115
    C_COMMENT (319) 114 115
    A_IMPORTANT (320) 132 133
    C_IMPORTANT (321) 132 133
    A_LINK (322) 116 117 118
    C_LINK (323) 116 117 118
    A_MEDIAOBJECT (324) 160 161 162 163 164 165
    C_MEDIAOBJECT (325) 160 161 162 163 164 165
    A_VIDEOOBJECT (326) 168 169
    C_VIDEOOBJECT (327) 168 169
    A_IMAGEOBJECT (328) 166 167
    C_IMAGEOBJECT (329) 166 167
    A_INFORMALTABLE (330) 181
    C_INFORMALTABLE (331) 181
    A_TGROUP (332) 182 183 184 185
    C_TGROUP (333) 182 183 184 185
    A_ROW (334) 196
    C_ROW (335) 196
    A_TABLE (336) 186
    C_TABLE (337) 186
    A_THEAD (338) 189
    C_THEAD (339) 189
    A_TFOOT (340) 191
    C_TFOOT (341) 191
    A_TBODY (342) 190
    C_TBODY (343) 190
    A_ENTRYTBL (344) 215 216
    C_ENTRYTBL (345) 215 216
    A_ENTRY (346) 214
    C_ENTRY (347) 214


No terminales con las reglas donde aparecen

    $accept (93)
        on left: 0
    sigma (94)
        on left: 1
        on right: 0
    article (95)
        on left: 2 3 4 5 6 7
        on right: 1
    recusection (96)
        on left: 8 9 10 11
        on right: 2 4 6 8 10 33 35 37
    content (97)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 2 3 4 5 6 7 12 14 16 18 20 22 24 26 28 30 33 34 35 36 37 38 39 40 41 132 133 175 176
    section (98)
        on left: 33 34 35 36 37 38
        on right: 8 9
    $@1 (99)
        on left: 32
        on right: 33
    simsection (100)
        on left: 39 40 41
        on right: 10 11
    infocontent (101)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 42 44 46 48 50 52 54 56
    info (102)
        on left: 56
        on right: 2 3 4 5 33 34 35 36 39 40 160 161 166 168
    abstractcontent (103)
        on left: 57 58 59 60
        on right: 57 59 61 62
    abstract (104)
        on left: 61 62
        on right: 30 31 46 47 212 213
    addresscontent (105)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 64 66 68 70 72 74 76 78
    $@2 (106)
        on left: 63
        on right: 64
    address (107)
        on left: 78
        on right: 20 21 48 49 126
    authorcontent (108)
        on left: 79 80 81 82 83
        on right: 79 80 81 84
    author (109)
        on left: 84
        on right: 50 51 108 122
    copyrightyearcontent (110)
        on left: 85 86 87
        on right: 85 90
    copyrightholdercontent (111)
        on left: 88 89
        on right: 86 88
    copyright (112)
        on left: 90 91
        on right: 54 55
    titlecontent (113)
        on left: 92 93 94 95 96 97 99 100
        on right: 92 94 96 99 101 102
    $@3 (114)
        on left: 98
        on right: 99
    titledoc (115)
        on left: 101
        on right: 2 3 6 7
    titlesec (116)
        on left: 102
        on right: 33 34 37 38 39 41 42 43 61 132
    simparacontent (117)
        on left: 103 104 105 106 107 108 109
        on right: 110 111 112 113 114 115 116 117
    simpara (118)
        on left: 110 111
        on right: 18 19 59 60 110 206 207
    emphasis (119)
        on left: 112 113
        on right: 92 93 103 112 119 136 137
    comment (120)
        on left: 114 115
        on right: 28 29 109 114 123 134 135 210 211
    link (121)
        on left: 116 117 118
        on right: 94 95 106 116 120 138 139
    paracontent (122)
        on left: 119 120 121 122 123 124 125 126 127 128 129
        on right: 130 131
    para (123)
        on left: 130 131
        on right: 16 17 57 58 130 204 205
    important (124)
        on left: 132 133
        on right: 14 15 125 202 203
    sharedcontent (125)
        on left: 134 135 136 137 138 139 141 142
        on right: 134 136 138 141 144 145 146 149 150 151 152 153 154 155
    $@4 (126)
        on left: 140
        on right: 141
    personame (127)
        on left: 143
        on right: 81 82 105
    firstname (128)
        on left: 144
        on right: 79 143
    surname (129)
        on left: 145
        on right: 80 83 143
    street (130)
        on left: 146
        on right: 66 67
    postcode (131)
        on left: 148
        on right: 76 77
    $@5 (132)
        on left: 147
        on right: 148
    city (133)
        on left: 149
        on right: 68 69
    phone (134)
        on left: 150
        on right: 72 73
    email (135)
        on left: 151
        on right: 74 75 96 97 107 121
    date (136)
        on left: 152
        on right: 52 53
    year (137)
        on left: 153
        on right: 85 86 87
    holder (138)
        on left: 154
        on right: 88 89
    state (139)
        on left: 155
        on right: 70 71
    mediaobjectcontent (140)
        on left: 156 157 158 159
        on right: 156 158 160 161 162 163
    mediaobject (141)
        on left: 160 161 162 163 164 165
        on right: 22 23 44 45 127 177 178 208 209
    imageobject (142)
        on left: 166 167
        on right: 158 159 161 163 165
    videoobject (143)
        on left: 168 169
        on right: 156 157 160 162 164
    videodata (144)
        on left: 170
        on right: 168 169
    imagedata (145)
        on left: 171 172
        on right: 166 167
    itemizedlist (146)
        on left: 173 174
        on right: 12 13 124 173 200 201
    listitem (147)
        on left: 175 176
        on right: 173 174 175
    informaltablecontent (148)
        on left: 177 178 179 180
        on right: 177 179 181
    informaltable (149)
        on left: 181
        on right: 24 25 128
    tgroup (150)
        on left: 182 183 184 185
        on right: 179 180
    table (151)
        on left: 186
        on right: 26 27
    tablecontent (152)
        on left: 187 188
        on right: 186 187 189 190 191
    thead (153)
        on left: 189
        on right: 182 183 215
    tbody (154)
        on left: 190
        on right: 182 184 215 216
    tfoot (155)
        on left: 191
        on right: 182 183 184 185
    rowcontent (156)
        on left: 192 193 194 195
        on right: 192 194 196
    row (157)
        on left: 196
        on right: 187 188
    entrycontent (158)
        on left: 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213
        on right: 198 200 202 204 206 208 210 212 214
    $@6 (159)
        on left: 197
        on right: 198
    entry (160)
        on left: 214
        on right: 192 193
    entrytbl (161)
        on left: 215 216
        on right: 194 195
    xlink (162)
        on left: 217
        on right: 118


Estado 0

    0 $accept: • sigma $end

    DOCTYPE  desplazar e ir al estado 1

    sigma  ir al estado 2


Estado 1

    1 sigma: DOCTYPE • article

    A_ARTICLE  desplazar e ir al estado 3

    article  ir al estado 4


Estado 2

    0 $accept: sigma • $end

    $end  desplazar e ir al estado 5


Estado 3

    2 article: A_ARTICLE • info titledoc content recusection C_ARTICLE
    3        | A_ARTICLE • info titledoc content C_ARTICLE
    4        | A_ARTICLE • info content recusection C_ARTICLE
    5        | A_ARTICLE • info content C_ARTICLE
    6        | A_ARTICLE • titledoc content recusection C_ARTICLE
    7        | A_ARTICLE • titledoc content C_ARTICLE

    A_INFO   desplazar e ir al estado 6
    A_TITLE  desplazar e ir al estado 7

    info      ir al estado 8
    titledoc  ir al estado 9


Estado 4

    1 sigma: DOCTYPE article •

    $default  reduce usando la regla 1 (sigma)


Estado 5

    0 $accept: sigma $end •

    $default  aceptar


Estado 6

   56 info: A_INFO • infocontent C_INFO

    A_TITLE        desplazar e ir al estado 10
    A_ABSTRACT     desplazar e ir al estado 11
    A_AUTHOR       desplazar e ir al estado 12
    A_DATE         desplazar e ir al estado 13
    A_COPYRIGHT    desplazar e ir al estado 14
    A_ADDRESS      desplazar e ir al estado 15
    A_MEDIAOBJECT  desplazar e ir al estado 16

    infocontent  ir al estado 17
    abstract     ir al estado 18
    address      ir al estado 19
    author       ir al estado 20
    copyright    ir al estado 21
    titlesec     ir al estado 22
    date         ir al estado 23
    mediaobject  ir al estado 24


Estado 7

  101 titledoc: A_TITLE • titlecontent C_TITLE

    TEXTO       desplazar e ir al estado 25
    A_EMAIL     desplazar e ir al estado 26
    A_EMPHASIS  desplazar e ir al estado 27
    A_LINK      desplazar e ir al estado 28

    titlecontent  ir al estado 29
    emphasis      ir al estado 30
    link          ir al estado 31
    email         ir al estado 32


Estado 8

    2 article: A_ARTICLE info • titledoc content recusection C_ARTICLE
    3        | A_ARTICLE info • titledoc content C_ARTICLE
    4        | A_ARTICLE info • content recusection C_ARTICLE
    5        | A_ARTICLE info • content C_ARTICLE

    A_TITLE          desplazar e ir al estado 7
    A_ABSTRACT       desplazar e ir al estado 11
    A_PARA           desplazar e ir al estado 33
    A_ADDRESS        desplazar e ir al estado 15
    A_ITEMIZEDLIST   desplazar e ir al estado 34
    A_SIMPARA        desplazar e ir al estado 35
    A_COMMENT        desplazar e ir al estado 36
    A_IMPORTANT      desplazar e ir al estado 37
    A_MEDIAOBJECT    desplazar e ir al estado 16
    A_INFORMALTABLE  desplazar e ir al estado 38
    A_TABLE          desplazar e ir al estado 39

    content        ir al estado 40
    abstract       ir al estado 41
    address        ir al estado 42
    titledoc       ir al estado 43
    simpara        ir al estado 44
    comment        ir al estado 45
    para           ir al estado 46
    important      ir al estado 47
    mediaobject    ir al estado 48
    itemizedlist   ir al estado 49
    informaltable  ir al estado 50
    table          ir al estado 51


Estado 9

    6 article: A_ARTICLE titledoc • content recusection C_ARTICLE
    7        | A_ARTICLE titledoc • content C_ARTICLE

    A_ABSTRACT       desplazar e ir al estado 11
    A_PARA           desplazar e ir al estado 33
    A_ADDRESS        desplazar e ir al estado 15
    A_ITEMIZEDLIST   desplazar e ir al estado 34
    A_SIMPARA        desplazar e ir al estado 35
    A_COMMENT        desplazar e ir al estado 36
    A_IMPORTANT      desplazar e ir al estado 37
    A_MEDIAOBJECT    desplazar e ir al estado 16
    A_INFORMALTABLE  desplazar e ir al estado 38
    A_TABLE          desplazar e ir al estado 39

    content        ir al estado 52
    abstract       ir al estado 41
    address        ir al estado 42
    simpara        ir al estado 44
    comment        ir al estado 45
    para           ir al estado 46
    important      ir al estado 47
    mediaobject    ir al estado 48
    itemizedlist   ir al estado 49
    informaltable  ir al estado 50
    table          ir al estado 51


Estado 10

  102 titlesec: A_TITLE • titlecontent C_TITLE

    TEXTO       desplazar e ir al estado 25
    A_EMAIL     desplazar e ir al estado 26
    A_EMPHASIS  desplazar e ir al estado 27
    A_LINK      desplazar e ir al estado 28

    titlecontent  ir al estado 53
    emphasis      ir al estado 30
    link          ir al estado 31
    email         ir al estado 32


Estado 11

   61 abstract: A_ABSTRACT • titlesec abstractcontent C_ABSTRACT
   62         | A_ABSTRACT • abstractcontent C_ABSTRACT

    A_TITLE    desplazar e ir al estado 10
    A_PARA     desplazar e ir al estado 33
    A_SIMPARA  desplazar e ir al estado 35

    abstractcontent  ir al estado 54
    titlesec         ir al estado 55
    simpara          ir al estado 56
    para             ir al estado 57


Estado 12

   84 author: A_AUTHOR • authorcontent C_AUTHOR

    A_PERSONNAME  desplazar e ir al estado 58
    A_FIRSTNAME   desplazar e ir al estado 59
    A_SURNAME     desplazar e ir al estado 60

    authorcontent  ir al estado 61
    personame      ir al estado 62
    firstname      ir al estado 63
    surname        ir al estado 64


Estado 13

  152 date: A_DATE • sharedcontent C_DATE

    TEXTO       desplazar e ir al estado 65
    A_EMPHASIS  desplazar e ir al estado 27
    A_COMMENT   desplazar e ir al estado 36
    A_LINK      desplazar e ir al estado 28

    emphasis       ir al estado 66
    comment        ir al estado 67
    link           ir al estado 68
    sharedcontent  ir al estado 69


Estado 14

   90 copyright: A_COPYRIGHT • copyrightyearcontent C_COPYRIGHT
   91          | A_COPYRIGHT • TEXTO C_COPYRIGHT

    TEXTO   desplazar e ir al estado 70
    A_YEAR  desplazar e ir al estado 71

    copyrightyearcontent  ir al estado 72
    year                  ir al estado 73


Estado 15

   78 address: A_ADDRESS • addresscontent C_ADDRESS

    TEXTO       desplazar e ir al estado 74
    A_CITY      desplazar e ir al estado 75
    A_STATE     desplazar e ir al estado 76
    A_POSTCODE  desplazar e ir al estado 77
    A_STREET    desplazar e ir al estado 78
    A_EMAIL     desplazar e ir al estado 26
    A_PHONE     desplazar e ir al estado 79

    addresscontent  ir al estado 80
    street          ir al estado 81
    postcode        ir al estado 82
    city            ir al estado 83
    phone           ir al estado 84
    email           ir al estado 85
    state           ir al estado 86


Estado 16
